--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 
 .idea/
+
+e:/code/cache/.locks/models--facebook--opt-125m/
+
+e:/code/cache/models--facebook--opt-125m/refs/
+
+e:/code/cache/models--facebook--opt-125m/snapshots/27dcfa74d334bc871f3234de431e71c6eeba5dd6/
+
+e:/code/cache/models--facebook--opt-125m/blobs/
+
+e:/code/cache/models--facebook--opt-125m/.no_exist/27dcfa74d334bc871f3234de431e71c6eeba5dd6/
